add employee-detail.jsp + edit controller

--- a/src/main/webapp/WEB-INF/jsp/common/navigation.jspf
+++ b/src/main/webapp/WEB-INF/jsp/common/navigation.jspf
@@ -9,5 +9,10 @@
           <li><a href="/list-employees">Employee</a></li>
           <li><a href="/logout">Logout</a></li>
      </ul>
+
+     <form class="form-inline">
+         <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+         <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+       </form>
  </div>
 </nav>
